--- a/html/index.html
+++ b/html/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-<<<<<<< HEAD
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,206 +13,61 @@
     <link rel="stylesheet" type="text/css" href="css/main.css" />
   </head>
   <body>
-    <div class="row">
-      <div class="col"></div>
+    <!-- ======= Header ======= -->
+    <header id="header">
+      <div class="container">
+        <h1><a href="index.html">Armando Laguardia</a></h1>
 
-      <div class="col">
-        <h1>Armando Laguardia</h1>
+        <h2>
+          I'm a passionate <span>computer science student</span> from Florida
+        </h2>
+
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a class="nav-link active" href="#header">Home</a></li>
+            <li><a class="nav-link" href="#about">About</a></li>
+            <li><a class="nav-link" href="#resume">Resume</a></li>
+            <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+            <li><a class="nav-link" href="#contact">Contact</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav>
+        <!-- .navbar -->
+
+        <div class="social-links">
+          <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+          <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+          <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        </div>
       </div>
+    </header>
+    <!-- End Header -->
 
-      <div class="col">
-        <a href="http://3.22.134.152:8080/PetConnect/#/landing">
-			<img src="images/PetConnect.png" id="PetConnect" alt="Pet connect link">
-		</a>
-		<br>
-		<a href="http://3.22.134.152:8080/BootRecipeRecommender/">Recipe Recommender app</a>
-		<br>
-		<a href="http://3.22.134.152:8080/BootMVCDinosaur/home.do">Crud project</a>
-		<br>
-		<a href="https://github.com/Lmandy239">Github</a>
+    <!-- <div class="col">
+      <a href="http://3.22.134.152:8080/PetConnect/#/landing">
+        <img
+          src="images/PetConnect.png"
+          id="PetConnect"
+          alt="Pet connect link"
+        />
+      </a>
+      <br />
+      <a href="http://3.22.134.152:8080/BootRecipeRecommender/"
+        >Recipe Recommender app</a
+      >
+      <br />
+      <a href="http://3.22.134.152:8080/BootMVCDinosaur/home.do"
+        >Crud project</a
+      >
+      <br />
+      <a href="https://github.com/Lmandy239">Github</a>
+    </div> -->
 
-      </div>
-    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
   </body>
-=======
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Armando Laguardia - Java Full-Stack Developer</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-        crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
-</head>
-
-<body>
-    <header>
-        <br>
-    </header>
-    <div class="container">
-        <div class="card p-4">
-            <h1 class="text-center">Answer to 3-A)</h1>
-            <!-- a -->
-            <p>
-                I’ve done a few projects myself in the past, from basic Java logic problems to some full stack
-                applications. However, the ones I’m the proudest of are:
-                <br>
-                <br>
-
-                A group Recipe Recommender Application, which allows users to log in and select from a database of
-                over 7,000 ingredients to then add them to a cart. Once the cart is filled up, the users have the option
-                to search for recipes that best match the cart. The app selects from a database of over 12,000 recipes
-                and displays the top 6.
-                <br>
-                <br>
-
-                <strong>The link to the deployed website:</strong>
-                <br>
-                <br>
-
-                <a href="http://3.22.134.152:8080/BootRecipeRecommender/"><button class="btn btn-primary">Recipe
-                        App</button></a>
-                <br>
-                <br>
-                All one needs to do is create a stub account to log in then everything is accessible. The most
-                interesting part about this project beyond its purpose is the ability for the user's cart to persist
-                through sessions and accounts. I was in charge of personally doing this part of the project.
-            </p>
-            <div class="card p-4 mt-2">
-                <img src="images/cart.jpeg" alt="cart image" class="img-fluid mb-2">
-                <br>
-                <p>
-                    This took some relational database mapping and proper entity mapping on the back-end spring boot
-                    side.
-
-                    I mapped the relationship between users and user ingredients to a joint table so that the users
-                    cart choices would persist, the user is both able to add and delete ingredients as shown above
-                </p>
-                <br>
-                <img src="images/database.jpeg" alt="Image 2" class="img-fluid mb-2">
-                <br>
-                <p>(table relationship) </p>
-                <br>
-                <img src="images/usermap.jpeg" alt="Image 3" class="img-fluid mb-2">
-                <br>
-                <p>
-                    (Entity Mapping on the User Class)
-
-                </p>
-                <br>
-                <img src="images/manymany.jpeg" alt="Image 3" class="img-fluid mb-2">
-                <br>
-                <p>
-                    (Ingredient side)
-                    <br>
-                    The controller logic I used for the cart (applying MVC with DAO’s):
-                </p>
-                <br>
-                <img src="images/cartcontroller.jpeg" alt="Image 3" class="img-fluid mb-2">
-                <br>
-                <p>
-                    Lastly the user Dao Implementation methods for this are being overwritten from a user DAO
-                    interface. It is also worth noting that I used a JPQL query to communicate with the database to
-                    delete from the cart:
-                </p>
-                <br>
-                <img src="images/cartmethod.jpeg" alt="Image 3" class="img-fluid mb-2">
-            </div>
-            <br>
-            <p>
-                Another Project I recently did was an event tracker. The theme of the tracker is books; however, not
-                everything in the database must be a “book” which is why I'm not too proud of it. However, I used
-                RESTful services for the back end and Angular JS to do this one. The app also allows the users full
-                CRUD of books they add or current ones. As well as the option to search by title.
-                <br>
-                <br>
-                <strong>Link to event Tracker:</strong>
-                <br>
-                <br>
-
-                <a href="http://3.22.134.152:8080/RESTBookTracker/"><button class="btn btn-primary">Event
-                        Tracker</button></a>
-            </p>
-            <br>
-
-            <div class="card p-4 mt-2">
-                <img src="images/endpoints.jpeg" alt="endpoints" class="img-fluid mb-2">
-                <br>
-                <p>
-                    Instead of sharing the code snippets for the repository methods, which are all automatic as most
-                    of them were findById or DeleteById. I figured it’d be good to show the end points of the backend
-                    logic, I also set the status codes and tested it with Postman:
-                    <br>
-                    <br>
-                    The only end point not mapped here was a controller I later added for a search by title
-                    functionality
-                </p>
-                <br>
-                <img src="images/searchbyname.jpeg" alt="name search" class="img-fluid mb-2">
-                <br>
-            </div>
-            <br>
-            <p>
-                Lastly, I have over 15 repositories with some projects I’ve done throughout my boot camp and some
-                other personal/ college ones.
-                <br>
-                <br>
-
-               <strong>GitHub:</strong>
-                <br>
-                <br>
-
-                <a href="https://github.com/Lmandy239"><button class="btn btn-primary">Personal GitHub</button></a>
-            </p>
-        </div>
-
-        <!-- b -->
-        <div class="card p-4 mt-2">
-            <h1 class="text-center">Answer to 3-B</h1>
-            <p>
-                One significant hurdle was the need to test the back end of my projects, which prompted me to delve
-                into concepts like JSON, request bodies, headers, and understanding status codes. This exploration was
-                crucial to enhance the functionality of my applications. Authentication became another area of focus,
-                although this was more of a front-end testing on new angular servers rather than back-end logic. To
-                test all this stuff, I took the initiative to learn about Postman and its features. This tool proved
-                to be useful for testing the functionality of my applications and the security measures. Additionally,
-                the transition from utilizing JPQL and JPA to embracing RESTful services presented a noteworthy
-                challenge. Previously relying on DAOs and crafting my own logic for methods, I had to adapt to using
-                the JPArepository implementation and properly creating methods within the specific repositories.
-                Moreover, although not directly related to back end. For my apps to look nice and clean, I had to learn
-                frameworks such as Angular and Bootstrap. Which I think highlights my ability to learn new stuff that
-                can make my products much better and viable.
-                <br>
-                <br>
-                Another particularly rewarding experience involved working on the Recipe Recommender project.
-                Initially, we used arrays to create a user's cart to store ingredients. However, this would not persist
-                the choices. Meaning I had to figure a way to make it happen. Therefore, I undertook a thorough
-                investigation to implement proper many-to-many relationships. Which is how I was able to connect the
-                tables on MySQL Workbench and then map the proper entity relationships.
-                <br>
-                <br>
-                These challenges, ranging from mastering new technologies like JSON and Postman to adapting to RESTful
-                APIs and tackling complex database relationships or learning Angular and Bootstrap reflect my
-                enthusiasm for pushing the boundaries of my knowledge. They underscore my commitment to staying abreast
-                of the latest developments in the field and my eagerness to apply this knowledge to create innovative
-                and efficient solutions – qualities that I personally believe align with the requirements of the role.
-            </p>
-        </div>
-    </div>
-    <footer>
-    	<br>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
-</body>
-
->>>>>>> 217d7b1a75a75db035d9cd47f42415ceac1c43e0
 </html>
